--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
   
       <!-- Right Icons (Desktop Only) -->
       <div class="hidden md:flex items-center space-x-6 text-gray-600">
-        <a href="#book" class="bg-teal-500 text-white px-3 py-1.5 rounded hover:bg-teal-600 transition">Book Trial</a>
+        <a href="#book" class="bg-pink-200 text-black px-6 py-3 rounded hover:bg-pink-400 transition">
+          Book Trial
+        </a>        
         <a href="#faq" class="hover:text-black transition">FAQ</a>
   
         <!-- Phone Icon -->
@@ -144,7 +146,7 @@
           <p class="text-base md:text-lg text-gray-700 mb-6 max-w-md">
             We help you pass — without the stress. Programs designed for working adults who just need the right system.
           </p>
-          <a href="#programs" class="inline-block bg-teal-500 text-white px-6 py-3 rounded hover:bg-teal-600 transition">
+          <a href="#programs" class="bg-pink-200 text-black px-6 py-3 rounded hover:bg-pink-400 transition">
             View Programs
           </a>
         </div>
@@ -152,9 +154,9 @@
       
 
     <!-- Study Programs Section -->
-    <section id="programs" class="snap-start min-h-screen py-20    bg-white py-16 px-6 md:px-20 flex flex-col justify-center pt-20">
+    <section id="programs" class="snap-start min-h-screen py-20 bg-white py-16 px-6 md:px-20 flex flex-col justify-center pt-32 mt-12">
       <div class="max-w-6xl mx-auto">
-        <h2 class="text-3xl md:text-4xl font-bold mb-10 text-center">Our Study Programs</h2>
+        <h2 class="text-3xl md:text-4xl font-bold mb-10 text-center">Our Main Programs</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
           <div class="bg-[#FAF9F6] rounded-lg p-6 shadow hover:shadow-md transition">
             <h3 class="text-xl font-semibold mb-2">Foundation Course</h3>
@@ -173,6 +175,63 @@
           </div>
         </div>
       </div>
+      <!-- Divider Text -->
+<div class="text-center mt-16 mb-4">
+  <p class="text-lg text-gray-600 italic">…or if you prefer to sharpen just one area…</p>
+</div>
+      <!-- Focused Skill Programs Section -->
+<div class="mt-24">
+  <h3 class="text-3xl font-bold text-center mb-10">Our Focused Skill Programs</h3>
+  <div class="flex flex-wrap justify-center gap-10 mb-12">
+    <!-- Reading -->
+    <button onclick="toggleSection('reading')" class="flex flex-col items-center group">
+      <img src="assets/icons/reading.png" alt="Reading Icon" class="w-16 h-16 mb-2 transition-transform group-hover:scale-105">
+      <span class="font-medium text-lg text-gray-700">Reading</span>
+    </button>
+  
+    <!-- Writing -->
+    <button onclick="toggleSection('writing')" class="flex flex-col items-center group">
+      <img src="assets/icons/writing.png" alt="Writing Icon" class="w-16 h-16 mb-2 transition-transform group-hover:scale-105">
+      <span class="font-medium text-lg text-gray-700">Writing</span>
+    </button>
+  
+    <!-- Listening -->
+    <button onclick="toggleSection('listening')" class="flex flex-col items-center group">
+      <img src="assets/icons/listening.png" alt="Listening Icon" class="w-16 h-16 mb-2 transition-transform group-hover:scale-105">
+      <span class="font-medium text-lg text-gray-700">Listening</span>
+    </button>
+  
+    <!-- Speaking -->
+    <button onclick="toggleSection('speaking')" class="flex flex-col items-center group">
+      <img src="assets/icons/speaking.png" alt="Speaking Icon" class="w-16 h-16 mb-2 transition-transform group-hover:scale-105">
+      <span class="font-medium text-lg text-gray-700">Speaking</span>
+    </button>
+  </div>
+  
+  
+  
+
+  <!-- Skill Descriptions -->
+  <div id="reading" class="hidden bg-[#FDF2F8] p-8 rounded-xl shadow text-center max-w-3xl mx-auto">
+    <h4 class="text-2xl font-bold mb-3 text-pink-500">Reading Booster</h4>
+    <p class="text-gray-700">Learn to skim, scan, and locate answers fast. Perfect if you lose time or miss keywords.</p>
+  </div>
+  <div id="writing" class="hidden bg-[#FDF2F8] p-8 rounded-xl shadow text-center max-w-3xl mx-auto">
+    <h4 class="text-2xl font-bold mb-3 text-pink-500">Writing Clarity Sessions</h4>
+    <p class="text-gray-700">Understand essay templates, task types, and get feedback that actually helps you grow.</p>
+  </div>
+  <div id="listening" class="hidden bg-[#FDF2F8] p-8 rounded-xl shadow text-center max-w-3xl mx-auto">
+    <h4 class="text-2xl font-bold mb-3 text-pink-500">Listening Tactics</h4>
+    <p class="text-gray-700">Practice fast note-taking, multiple-choice strategies, and accent prediction drills.</p>
+  </div>
+  <div id="speaking" class="hidden bg-[#FDF2F8] p-8 rounded-xl shadow text-center max-w-3xl mx-auto">
+    <h4 class="text-2xl font-bold mb-3 text-pink-500">Speaking Confidence Lab</h4>
+    <p class="text-gray-700">Improve fluency, reduce hesitations, and get used to speaking under pressure.</p>
+  </div>
+</div>
+
+</div>
+
     </section>
 
     <!-- Placement Test Section -->
@@ -183,7 +242,7 @@
             Take our quick placement test to find out your current level and get personalized program recommendations.
         </p>
         <a href="#"
-            class="bg-teal-500 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-teal-600 transition shadow">
+            class="bg-pink-200 text-black px-6 py-3 rounded hover:bg-pink-400 transition">
             Take the Test Now
         </a>
         </div>
@@ -360,7 +419,7 @@
       <!-- Submit -->
       <button 
         type="submit" 
-        class="bg-teal-500 text-white px-6 py-3 rounded hover:bg-teal-600 transition w-full">
+        class="bg-pink-200 text-black px-6 py-3 rounded hover:bg-pink-400 transition w-full">
         Submit Request
       </button>
     </form>
@@ -374,10 +433,10 @@
     </p>
   
     <div class="flex flex-col md:flex-row items-center gap-4">
-      <a href="mailto:hello@kaiacademy.com" class="bg-teal-500 text-white px-6 py-3 rounded hover:bg-teal-600 transition">
+      <a href="mailto:hello@kaiacademy.com" class="bg-pink-200 text-black px-6 py-3 rounded hover:bg-pink-400 transition">
         📧 Email Us
       </a>
-      <a href="https://wa.me/yourwhatsappnumber" target="_blank" class="bg-green-500 text-white px-6 py-3 rounded hover:bg-green-600 transition">
+      <a href="https://wa.me/yourwhatsappnumber" target="_blank" class="bg-pink-200 text-black px-6 py-3 rounded hover:bg-pink-400 transition">
         💬 Message on WhatsApp
       </a>
     </div>
@@ -536,6 +595,12 @@
 
 
 
+  function toggleSection(sectionId) {
+  ['reading', 'writing', 'listening', 'speaking'].forEach(id => {
+    document.getElementById(id).classList.add('hidden');
+  });
+  document.getElementById(sectionId).classList.remove('hidden');
+}
 
     
 
