--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   </head>
 
-  <body class="overflow-x-hidden snap-y snap-mandatory h-screen overflow-scroll">
+  <body class="overflow-x-hidden">
 
     <!-- Sticky Navbar -->
 <header class="fixed top-0 left-0 right-0 z-50 bg-white/90 backdrop-blur-md shadow-sm">
