--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
         </div>
       </div>
       <!-- Divider Text -->
-<div class="text-center mt-16 mb-4">
+<div class="text-center mt-14 mb-4">
   <p class="text-lg text-gray-600 italic">…or if you prefer to sharpen just one area…</p>
 </div>
       <!-- Focused Skill Programs Section -->
-<div class="mt-24">
+<div class="mt-8">
   <h3 class="text-3xl font-bold text-center mb-10">Our Focused Skill Programs</h3>
   <div class="flex flex-wrap justify-center gap-10 mb-12">
     <!-- Reading -->
@@ -259,19 +259,19 @@
             <div class="bg-[#FAF9F6] p-6 rounded-lg shadow hover:shadow-md transition">
             <h3 class="text-xl font-semibold mb-2">IELTS Vocab List</h3>
             <p class="text-gray-700 mb-4">Essential academic and topic-specific vocabulary for high band scores.</p>
-            <a href="#" class="text-teal-600 font-semibold hover:underline">Download PDF →</a>
+            <a href="#" class="text-pink-400 font-semibold hover:underline">Download PDF →</a>
             </div>
             <!-- Freebie 2 -->
             <div class="bg-[#FAF9F6] p-6 rounded-lg shadow hover:shadow-md transition">
             <h3 class="text-xl font-semibold mb-2">Speaking Sample Topics</h3>
             <p class="text-gray-700 mb-4">Practice with real-world questions and model answers.</p>
-            <a href="#" class="text-teal-600 font-semibold hover:underline">Download PDF →</a>
+            <a href="#" class="text-pink-400 font-semibold hover:underline">Download PDF →</a>
             </div>
             <!-- Freebie 3 -->
             <div class="bg-[#FAF9F6] p-6 rounded-lg shadow hover:shadow-md transition">
             <h3 class="text-xl font-semibold mb-2">Writing Task 2 Template</h3>
             <p class="text-gray-700 mb-4">Learn how to structure essays with clarity and logic.</p>
-            <a href="#" class="text-teal-600 font-semibold hover:underline">Download PDF →</a>
+            <a href="#" class="text-pink-400 font-semibold hover:underline">Download PDF →</a>
             </div>
         </div>
         </div>
@@ -279,7 +279,7 @@
   
     <!-- Testimonials Section -->
 <!-- Testimonials Section -->
-<section id="testimonials" class="snap-start min-h-screen py-20 bg-[#FAF9F6] px-6 md:px-20 py-16 flex flex-col justify-center items-center text-center opacity-0 translate-y-10 transition-all duration-700 ease-out">
+<section id="testimonials" class="snap-start min-h-screen pt-32 pb-20 bg-[#FAF9F6] px-6 md:px-20 flex flex-col justify-center items-center text-center opacity-0 translate-y-10 transition-all duration-700 ease-out">
     <div class="max-w-4xl w-full">
   
       <!-- Heading -->
@@ -287,7 +287,7 @@
   
       <!-- Swiper -->
       <div class="relative">
-        <div class="swiper mySwiper">
+        <div class="swiper mySwiper relative pb-28">
           <div class="swiper-wrapper">
             <!-- Slide 1 -->
             <div class="swiper-slide bg-white p-6 rounded-lg shadow text-left">
@@ -307,17 +307,17 @@
           </div>
   
           <!-- Pagination -->
-          <div class="swiper-pagination mt-6"></div>
+          <div class="swiper-pagination !bottom-6"></div>
         </div>
     </div>
     <!-- FAQ Section -->
-<section id="faq" class="snap-start min-h-screen bg-white px-6 md:px-20 py-20 flex flex-col justify-center items-center">
+    <section id="faq" class="snap-start min-h-screen bg-[#FAF9F6] px-6 md:px-20 py-20 flex flex-col justify-center items-center border-gray-200">
     <h2 class="text-3xl md:text-4xl font-bold mb-10 text-center">Frequently Asked Questions</h2>
   
     <div class="max-w-3xl w-full space-y-4">
       <!-- FAQ Item 1 -->
       <div class="border rounded-md overflow-hidden">
-        <button class="w-full flex justify-between items-center px-6 py-4 text-left text-gray-800 font-medium bg-gray-50 hover:bg-gray-100 transition faq-toggle">
+        <button class="w-full flex justify-between items-center px-6 py-4 text-left text-gray-800 font-medium bg-white hover:bg-gray-50 transition faq-toggle">
           How much do the classes cost?
           <span class="text-xl transition-transform">&#x25BC;</span>
         </button>
@@ -328,7 +328,7 @@
   
       <!-- FAQ Item 2 -->
       <div class="border rounded-md overflow-hidden">
-        <button class="w-full flex justify-between items-center px-6 py-4 text-left text-gray-800 font-medium bg-gray-50 hover:bg-gray-100 transition faq-toggle">
+        <button class="w-full flex justify-between items-center px-6 py-4 text-left text-gray-800 font-medium bg-white hover:bg-gray-50 transition faq-toggle">
           Are the lessons online or in-person?
           <span class="text-xl transition-transform">&#x25BC;</span>
         </button>
@@ -339,7 +339,7 @@
   
       <!-- FAQ Item 3 -->
       <div class="border rounded-md overflow-hidden">
-        <button class="w-full flex justify-between items-center px-6 py-4 text-left text-gray-800 font-medium bg-gray-50 hover:bg-gray-100 transition faq-toggle">
+        <button class="w-full flex justify-between items-center px-6 py-4 text-left text-gray-800 font-medium bg-white hover:bg-gray-50 transition faq-toggle">
           How do I know which program is right for me?
           <span class="text-xl transition-transform">&#x25BC;</span>
         </button>
@@ -350,13 +350,14 @@
   
   <!-- Book Trial Section -->
 <section id="book" class="snap-start bg-[#FAF9F6] py-20 px-6 md:px-20 flex flex-col items-center">
-    <h2 class="text-3xl md:text-4xl font-bold mb-10 text-center">Book a Trial</h2>
+    <h2 class="text-4xl md:text-4xl font-bold mb-4 text-center">Book a Trial Now!</h2>
   
     <form 
       action="https://formspree.io/f/xblkgjrj" 
       method="POST" 
       
-      class="w-full max-w-xl bg-white p-8 rounded-lg shadow-md space-y-6">
+      class="w-full max-w-xl bg-white pt-0 pb-8 px-8 rounded-lg shadow-md space-y-6">
+
       <input type="hidden" name="_redirect" value="thank-you.html">
 
       <!-- Name -->
@@ -367,7 +368,7 @@
           id="name" 
           name="name" 
           required 
-          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400"
         />
       </div>
   
@@ -379,7 +380,7 @@
           id="email" 
           name="email" 
           required 
-          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400"
         />
       </div>
   
@@ -392,7 +393,7 @@
           name="datetime" 
           placeholder="e.g. 12 March, 7PM" 
           required 
-          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400"
         />
         <!-- Hidden input for timezone -->
 <input type="hidden" name="timezone" id="timezone" />
@@ -412,7 +413,7 @@
           name="goal" 
           rows="4" 
           placeholder="e.g. I want to hit Band 7.5 for migration..." 
-          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-teal-400"
+          class="w-full border border-gray-300 rounded px-4 py-2 focus:outline-none focus:ring-2 focus:ring-pink-400"
         ></textarea>
       </div>
   
